--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: sofia-pro, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -69,4 +69,21 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.line-height-32 {
+  line-height: 32px;
+}
+
+.second:hover .second-hover\:visible {
+  visibility: visible;
+}
+
+.second:hover .second-hover\:translate-y-\[1\.65em\] {
+  --tw-translate-y: 1.65em;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.second:hover .second-hover\:opacity-100 {
+  opacity: 1;
 }
